# FileSystem

./: CMakeLists.txt  README.md  formatter.sh
include/core/: filesystem.h  fsck.h  fsck_fixes.h  journal.h  quota.h  search.h  snapshot.h
include/ui/: filesystem_detector.h  filesystem_external_detector.h  filesystem_local_detector.h  filesystem_mount_dialog.h  mainwindow.h  mainwindow_dialogs.h  mainwindow_file_ops.h  tree_view_manager.h
src/: main.cpp
src/core/: filesystem.cpp  fsck.cpp  fsck_fixes.cpp  journal.cpp  quota.cpp  search.cpp  snapshot.cpp
src/ui/: filesystem_detector.cpp  filesystem_detector_new.cpp  filesystem_external_detector.cpp  filesystem_local_detector.cpp  filesystem_mount_dialog.cpp  mainwindow.cpp  mainwindow.cpp.new  mainwindow.ui  mainwindow_dialogs.cpp  mainwindow_dialogs.cpp.new  mainwindow_file_ops.cpp  tree_view_manager.cpp
